--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "id": "com.cyclone-software.dahuacam",
-    "version": "0.2.1",
+    "version": "0.2.2",
     "compatibility": ">=2.0.0",
     "sdk": 2,
     "name": {
@@ -61,56 +61,112 @@
             "title": {
                 "en": "VideoMotion Start",
                 "nl": "Video beweging gestart"
-            }
+            },
+            "args": [
+              {
+                "name": "device",
+                "type": "device",
+                "filter" : "driver_id=DahuaCamera"
+              }
+            ]
         },
         {
             "id": "VideoMotionStop",
             "title": {
                 "en": "VideoMotion Stop",
                 "nl": "Video beweging gestopt"
-            }
+            },
+            "args": [
+              {
+                "name": "device",
+                "type": "device",
+                "filter" : "driver_id=DahuaCamera"
+              }
+            ]
         },
         {
             "id": "AlarmLocalStart",
             "title": {
                 "en": "Alarm Local Start",
                 "nl": "Lokaal alarm gestart"
-            }
+            },
+            "args": [
+              {
+                "name": "device",
+                "type": "device",
+                "filter" : "driver_id=DahuaCamera"
+              }
+            ]
         },
         {
             "id": "AlarmLocalStop",
             "title": {
                 "en": "Alarm local stop",
                 "nl": "Lokaal alarm gestopt"
-            }
+            },
+            "args": [
+              {
+                "name": "device",
+                "type": "device",
+                "filter" : "driver_id=DahuaCamera"
+              }
+            ]
         },
         {
             "id": "VideoLossStart",
             "title": {
                 "en": "Videoloss Start",
                 "nl": "Geen Videosignaal"
-            }
+            },
+            "args": [
+              {
+                "name": "device",
+                "type": "device",
+                "filter" : "driver_id=DahuaCamera"
+              }
+            ]
         },
         {
             "id": "VideoLossStop",
             "title": {
                 "en": "Videoloss Stop",
                 "nl": "Video signaal aanwezig"
-            }
+            },
+            "args": [
+              {
+                "name": "device",
+                "type": "device",
+                "filter" : "driver_id=DahuaCamera"
+              }
+            ]
         },
         {
             "id": "VideoBlindStart",
             "title": {
                 "en": "Videoblind start",
                 "nl": "Videoblind start"
-            }
+            },
+            "args": [
+              {
+                "name": "device",
+                "type": "device",
+                "filter" : "driver_id=DahuaCamera"
+              }
+            ]
         },
         {
             "id": "VideoBlindStop",
             "title": {
                 "en": "Video Unblind",
                 "nl": "Video Unblind"
-            }
+            },
+            "args": [
+              {
+                "name": "device",
+                "type": "device",
+                "filter" : "driver_id=DahuaCamera"
+              }
+            ]
         }
     ],
         "actions": [
